--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/financeTracker
+MONGO_URI=mongodb+srv://varshitha:VDZZEv4wGCmHJWWN@student-db.57qg3of.mongodb.net/?retryWrites=true&w=majority&appName=Student-db
 PORT=5000
+CLIENT_URL=https://finance-tracker-cc7165505-nq7j.vercel.app
